Bulk of work for big trend done. Supports multiple attempts, responsive bar sizes, division by month, unattempted activities. Still needs some detail work like hover effect.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 
         <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
         <script type="module" src="mini-trend/mini-trend.js"></script>
+        <script type="module" src="big-trend/big-trend.js"></script>
     </head>
     <body>
-        <h1>Trend Demo</h1>
+        <h1>Mini Trend Demo</h1>
         <p>
             <mini-trend></mini-trend>
+        </p>
+        <h1>Big Trend Demo</h1>
+        <p>
+            <big-trend></big-trend>
         </p>
     </body>
 </html>
