--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             .demo-container {
                 background-color: #fff;
                 margin: 48px auto;
+                max-width: 800px;
                 padding: 48px;
-                width: 800px;
+                width: calc(100% - 100px);
             }
         </style>
     </head>
@@ -32,15 +33,31 @@
             <h1>Mini Trend Demo</h1>
             <h2>No Data, 3 Levels</h2>
             <mini-trend></mini-trend>
-            <h2>Complicated Dataset, 10 Levels</h2>
+            <h2>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h2>
             <mini-trend data-set="1"></mini-trend>
+            <h2>Few Items, Untitled Activity, Unattempted Activity, 3 Levels</h2>
+            <mini-trend data-set="2"></mini-trend>
+            <h2>Many Items, Exceeds Widths of Both Trends, 4 Levels</h2>
+            <mini-trend data-set="3"></mini-trend>
+            <h2>Complex Dataset, 10 Levels</h2>
+            <mini-trend data-set="4"></mini-trend>
+            <h2>20 Levels, Squished Bars</h2>
+            <mini-trend data-set="5"></mini-trend>
         </div>
         <div class="demo-container">
             <h1>Big Trend Demo</h1>
             <h2>No Data, 3 Levels</h2>
             <big-trend></big-trend>
-            <h2>Complicated Dataset, 10 Levels</h2>
+            <h2>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h2>
             <big-trend data-set="1"></big-trend>
+            <h2>Few Items, Untitled Activity, Unattempted Activity, 3 Levels</h2>
+            <big-trend data-set="2"></big-trend>
+            <h2>Many Items, Exceeds Widths of Both Trends, 4 Levels</h2>
+            <big-trend data-set="3"></big-trend>
+            <h2>Complex Dataset, 10 Levels</h2>
+            <big-trend data-set="4"></big-trend>
+            <h2>20 Levels, Squished Bars</h2>
+            <big-trend data-set="5"></big-trend>
         </div>
     </body>
 </html>
