Added readme and cleaned up demos

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     
-        <title>trend demo</title>
-
-        <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-        <script type="module" src="mini-trend/mini-trend.js"></script>
-        <script type="module" src="big-trend/big-trend.js"></script>
+        <title>d2l-outcomes-user-progress demos</title>
 
         <style>
             body {
@@ -30,34 +26,10 @@
     </head>
     <body>
         <div class="demo-container">
-            <h1>Mini Trend Demo</h1>
-            <h2>No Data, 3 Levels</h2>
-            <mini-trend></mini-trend>
-            <h2>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h2>
-            <mini-trend data-set="1"></mini-trend>
-            <h2>Few Items, Untitled Activity, Unattempted Activity, 3 Levels</h2>
-            <mini-trend data-set="2"></mini-trend>
-            <h2>Many Items, Exceeds Widths of Both Trends, 4 Levels</h2>
-            <mini-trend data-set="3"></mini-trend>
-            <h2>Complex Dataset, 10 Levels</h2>
-            <mini-trend data-set="4"></mini-trend>
-            <h2>20 Levels, Squished Bars</h2>
-            <mini-trend data-set="5"></mini-trend>
-        </div>
-        <div class="demo-container">
-            <h1>Big Trend Demo</h1>
-            <h2>No Data, 3 Levels</h2>
-            <big-trend></big-trend>
-            <h2>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h2>
-            <big-trend data-set="1"></big-trend>
-            <h2>Few Items, Untitled Activity, Unattempted Activity, 3 Levels</h2>
-            <big-trend data-set="2"></big-trend>
-            <h2>Many Items, Exceeds Widths of Both Trends, 4 Levels</h2>
-            <big-trend data-set="3"></big-trend>
-            <h2>Complex Dataset, 10 Levels</h2>
-            <big-trend data-set="4"></big-trend>
-            <h2>20 Levels, Squished Bars</h2>
-            <big-trend data-set="5"></big-trend>
+            <h1>d2l-outcomes-user-progress Component Demos</h1>
+            <ul>
+                <li><a href="demo/trend-demos.html">Trend Component Demos</a></li>
+            </ul>
         </div>
     </body>
 </html>
