Changed directory structure

--- a/demo/trend-demos.html
+++ b/demo/trend-demos.html
@@ -7,8 +7,8 @@
         <title>Trend Component Demo</title>
 
         <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-        <script type="module" src="../mini-trend/mini-trend.js"></script>
-        <script type="module" src="../big-trend/big-trend.js"></script>
+        <script type="module" src="../src/mini-trend/mini-trend.js"></script>
+        <script type="module" src="../src/big-trend/big-trend.js"></script>
 
         <style>
             body {
