--- a/demo/trend-demos.html
+++ b/demo/trend-demos.html
@@ -32,32 +32,32 @@
         <div class="demo-container">
             <h1>Mini Trend Demo</h1>
             <h2>No Data, 3 Levels</h2>
-            <mini-trend></mini-trend>
+            <d2l-mini-trend></d2l-mini-trend>
             <h2>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h2>
-            <mini-trend data-set="1"></mini-trend>
+            <d2l-mini-trend data-set="1"></d2l-mini-trend>
             <h2>Few Items, Untitled Activity, Unattempted Activity, 3 Levels</h2>
-            <mini-trend data-set="2"></mini-trend>
+            <d2l-mini-trend data-set="2"></d2l-mini-trend>
             <h2>Many Items, Exceeds Widths of Both Trends, 4 Levels</h2>
-            <mini-trend data-set="3"></mini-trend>
+            <d2l-mini-trend data-set="3"></d2l-mini-trend>
             <h2>Complex Dataset, 10 Levels</h2>
-            <mini-trend data-set="4"></mini-trend>
+            <d2l-mini-trend data-set="4"></d2l-mini-trend>
             <h2>20 Levels, Squished Bars</h2>
-            <mini-trend data-set="5"></mini-trend>
+            <d2l-mini-trend data-set="5"></d2l-mini-trend>
         </div>
         <div class="demo-container">
             <h1>Big Trend Demo</h1>
             <h2>No Data, 3 Levels</h2>
-            <big-trend></big-trend>
+            <d2l-big-trend></d2l-big-trend>
             <h2>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h2>
-            <big-trend data-set="1"></big-trend>
+            <d2l-big-trend data-set="1"></d2l-big-trend>
             <h2>Few Items, Untitled Activity, Unattempted Activity, 3 Levels</h2>
-            <big-trend data-set="2"></big-trend>
+            <d2l-big-trend data-set="2"></d2l-big-trend>
             <h2>Many Items, Exceeds Widths of Both Trends, 4 Levels</h2>
-            <big-trend data-set="3"></big-trend>
+            <d2l-big-trend data-set="3"></d2l-big-trend>
             <h2>Complex Dataset, 10 Levels</h2>
-            <big-trend data-set="4"></big-trend>
+            <d2l-big-trend data-set="4"></d2l-big-trend>
             <h2>20 Levels, Squished Bars</h2>
-            <big-trend data-set="5"></big-trend>
+            <d2l-big-trend data-set="5"></d2l-big-trend>
         </div>
     </body>
 </html>
