Added d2l-outcome-progress-details to demo page

--- a/demo/trend-demos.html
+++ b/demo/trend-demos.html
@@ -7,8 +7,11 @@
         <title>Trend Component Demo</title>
 
         <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+        <script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>
         <script type="module" src="../src/mini-trend/mini-trend.js"></script>
         <script type="module" src="../src/big-trend/big-trend.js"></script>
+        <script type="module" src="../src/outcome-details/outcome-details.js"></script>
+        <script type="module" src="../node_modules/d2l-outcomes-level-of-achievements/d2l-outcomes-level-of-achievements.js"></script>
 
         <style>
             body {
@@ -27,8 +30,21 @@
                 width: calc(100% - 100px);
             }
         </style>
+		
+		<script type="module">
+			const $_typographyImport = document.createElement('template');
+
+			$_typographyImport.innerHTML = `
+				<custom-style include="d2l-typography">
+					<style is="custom-style" include="d2l-typography">
+						html { font-size: 20px; }
+					</style>
+				</custom-style>`;
+
+			document.body.appendChild($_typographyImport.content);
+		</script>
     </head>
-    <body>
+    <body class="d2l-typography">
         <div class="demo-container">
             <h1>Mini Trend Demo</h1>
             <h2>No Data, 3 Levels</h2>
@@ -59,5 +75,13 @@
             <h2>20 Levels, Squished Bars</h2>
             <d2l-big-trend href="/data/dataset5.json" token="abc123"></d2l-big-trend>
         </div>
+		
+		<div class="demo-container">
+			<h1>Outcome Details</h1>
+			<d2l-outcome-progress-details
+				href="/data/outcome-details-demo/outcome-progress.json"
+				token="abc123"
+			></d2l-outcome-progress-details>
+		</div>
     </body>
 </html>
