--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <h2>d2l-outcomes-user-progress Component Demos</h2>
             <ul>
                 <li><a href="demo/trend-demos.html">Trend Component Demos</a></li>
+                <li><a href="demo/outcomes-list-demos.html">Outcomes List Demo</a></li>
                 <li><a href="demo/outcome-progress-demos.html">Outcome Progress Demo</a></li>
             </ul>
         </div>
