Renamed details demo to reduce ambiguity

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul>
                 <li><a href="demo/trend-demos.html">Trend Component Demos</a></li>
                 <li><a href="demo/outcomes-list-demos.html">Outcomes List Demo</a></li>
-                <li><a href="demo/outcome-progress-demos.html">Outcome Progress Demo</a></li>
+                <li><a href="demo/outcome-details-demos.html">Outcome Details Demo</a></li>
             </ul>
         </div>
     </body>
