--- a/demo/outcome-details-demos.html
+++ b/demo/outcome-details-demos.html
@@ -4,13 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 	
-		<title>Outcome Progress Component Demo</title>
+		<title>Outcome Progress Details Component Demo</title>
 
 		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 		<script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>
-		<script type="module" src="../src/big-trend/big-trend.js"></script>
 		<script type="module" src="../src/outcome-details/outcome-details.js"></script>
-		<script type="module" src="../node_modules/d2l-outcomes-level-of-achievements/d2l-outcomes-level-of-achievements.js"></script>
 
 		<style>
 			body {
