--- a/demo/outcomes-list-demos.html
+++ b/demo/outcomes-list-demos.html
@@ -38,7 +38,7 @@
 					</style>
 				</custom-style>`;
 
-			document.body.appendChild($_typographyImport.content);
+            document.body.appendChild($_typographyImport.content);
 		</script>
     </head>
     <body class="d2l-typography">
@@ -46,9 +46,11 @@
             <h2>Outcomes List Demo</h2>
             <d2l-outcomes-list href="/data/user-progress-outcomes.json" token="abc123"></d2l-outcomes-list>
         </div>
-        <script>
-            document.getElementsByTagName('d2l-outcomes-list')[0].addEventListener('onOutcomeClick', (e) => {
-                console.log(`Clicked on outcome: ${e.detail.id}`);
+        <script type="module">
+            import { oupConsts } from '../src/consts';
+            console.log(JSON.stringify(oupConsts));
+            document.getElementsByTagName('d2l-outcomes-list')[0].addEventListener(oupConsts.events.outcomeListItemClicked, (e) => {
+                console.log(`Clicked on outcome: ${e.detail.href}`);
             });
         </script>
     </body>
