Added wrapper component which will act as the whole outcomes user progress page. Combines the outcomes list with the outcomes details

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <li><a href="demo/trend-demos.html">Trend Component Demos</a></li>
                 <li><a href="demo/outcomes-list-demos.html">Outcomes List Demo</a></li>
                 <li><a href="demo/outcome-details-demos.html">Outcome Details Demo</a></li>
+                <li><a href="demo/outcomes-user-progress-demos.html">Outcomes User Progress Demo</a></li>
             </ul>
         </div>
     </body>
