--- a/demo/outcome-progress-demos.html
+++ b/demo/outcome-progress-demos.html
@@ -8,8 +8,8 @@
 
 		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 		<script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>
-		<script type="module" src="../src/big-trend/big-trend.js"></script>
 		<script type="module" src="../src/outcome-details/outcome-details.js"></script>
+		<script type="module" src="../src/evidence/evidence-skeleton.js"></script>
 		<script type="module" src="../node_modules/d2l-outcomes-level-of-achievements/d2l-outcomes-level-of-achievements.js"></script>
 
 		<style>
@@ -50,6 +50,11 @@
 				href="/data/outcome-details-demo/outcome-progress.json"
 				token="abc123"
 			></d2l-outcome-progress-details>
+		</div>
+		
+		<div class="demo-container">
+			<h1>Evidence Skeleton</h1>
+			<d2l-evidence-skeleton></d2l-evidence-skeleton>
 		</div>
 	</body>
 </html>
