Fixed lang term when there is no evidence

--- a/demo/outcome-details-demos.html
+++ b/demo/outcome-details-demos.html
@@ -47,6 +47,7 @@
 			<d2l-outcome-progress-details
 				href="/data/outcome-details-demo/outcome-progress.json"
 				token="abc123"
+				outcome-term="outcomes"
 			></d2l-outcome-progress-details>
 		</div>
 		
