--- a/demo/outcomes-list-demos.html
+++ b/demo/outcomes-list-demos.html
@@ -46,6 +46,10 @@
             <h2>Outcomes List Demo</h2>
             <d2l-outcomes-list href="/data/user-progress-outcomes.json" token="abc123"></d2l-outcomes-list>
         </div>
+        <div class="demo-container">
+            <h2>Outcomes List Loading</h2>
+            <d2l-outcomes-list></d2l-outcomes-list>
+        </div>
         <script type="module">
             import { oupConsts } from '../src/consts';
             console.log(JSON.stringify(oupConsts));
