Add no scale case to demo

--- a/demo/trend-demos.html
+++ b/demo/trend-demos.html
@@ -45,6 +45,8 @@
     <body class="d2l-typography">
         <div class="demo-container">
             <h2>Mini Trend Demo</h2>
+            <h3>Nothing, not even a scale</h3>
+            <d2l-mini-trend href="/data/user-progress-outcomes/6/activities.json" token="abc123"></d2l-mini-trend>
             <h3>No Data, 3 Levels</h3>
             <d2l-mini-trend href="/data/user-progress-outcomes/0/activities.json" token="abc123"></d2l-mini-trend>
             <h3>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h3>
@@ -60,6 +62,8 @@
         </div>
         <div class="demo-container">
             <h2>Big Trend Demo</h2>
+            <h3>Nothing, not even a scale</h3>
+            <d2l-big-trend href="/data/user-progress-outcomes/6/activities.json" token="abc123"></d2l-big-trend>
             <h3>No Data, 3 Levels</h3>
             <d2l-big-trend href="/data/user-progress-outcomes/0/activities.json" token="abc123"></d2l-big-trend>
             <h3>Fills Mini Trend, Multiple Attempts, Multiple Months, 2 Levels</h3>
