--- a/demo/outcomes-list-demos.html
+++ b/demo/outcomes-list-demos.html
@@ -48,6 +48,8 @@
             <d2l-outcomes-list href="/data/user-progress-no-outcomes.json" token="abc123"></d2l-outcomes-list>
             <h3>List With Data</h3>
             <d2l-outcomes-list href="/data/user-progress-outcomes.json" token="abc123"></d2l-outcomes-list>
+            <h3>List With Hierarchy</h3>
+            <d2l-outcomes-list href="/data/user-progress-outcome-nodes.json" token="abc123"></d2l-outcomes-list>
         </div>
         <div class="demo-container">
             <h2>Outcomes List Loading</h2>
