--- a/demo/outcomes-list-demos.html
+++ b/demo/outcomes-list-demos.html
@@ -46,9 +46,9 @@
             <h2>Outcomes List Demos</h2>
             <h3>Empty List</h3>
             <d2l-outcomes-list href="/data/user-progress-no-outcomes.json" token="abc123"></d2l-outcomes-list>
-            <h3>List With Data</h3>
+            <h3>Flat List View</h3>
             <d2l-outcomes-list href="/data/user-progress-outcomes.json" token="abc123"></d2l-outcomes-list>
-            <h3>List With Hierarchy</h3>
+            <h3>Hierarchy View</h3>
             <d2l-outcomes-list href="/data/user-progress-outcome-nodes.json" token="abc123"></d2l-outcomes-list>
         </div>
         <div class="demo-container">
