--- a/demo/outcomes-list-demos.html
+++ b/demo/outcomes-list-demos.html
@@ -49,7 +49,7 @@
             <h3>Flat List View</h3>
             <d2l-outcomes-list href="/data/user-progress-outcomes.json" token="abc123"></d2l-outcomes-list>
             <h3>Hierarchy View</h3>
-            <d2l-outcomes-list href="/data/user-progress-outcome-nodes.json" token="abc123"></d2l-outcomes-list>
+            <d2l-outcomes-list href="/data/user-progress-outcome-nodes.json" token="abc123" outcome-term="outcomes"></d2l-outcomes-list>
         </div>
         <div class="demo-container">
             <h2>Outcomes List Loading</h2>
