--- a/demo/outcome-details-demos.html
+++ b/demo/outcome-details-demos.html
@@ -9,6 +9,7 @@
 		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 		<script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>
 		<script type="module" src="../src/outcome-details/outcome-details.js"></script>
+		<script type="module" src="../src/evidence/evidence-skeleton.js"></script>
 
 		<style>
 			body {
@@ -45,7 +46,7 @@
 		<div class="demo-container">
 			<h1>Outcome Details</h1>
 			<d2l-outcome-progress-details
-				href="/data/outcome-details-demo/outcome-progress.json"
+				href="/data/user-progress-outcomes/upo0.json"
 				token="abc123"
 				outcome-term="outcomes"
 			></d2l-outcome-progress-details>
