--- a/demo/index.html
+++ b/demo/index.html
@@ -43,10 +43,10 @@
         <div class="demo-container">
             <h2>d2l-outcomes-user-progress Component Demos</h2>
             <ul>
-                <li><a href="demo/trend-demos.html">Trend Component Demos</a></li>
-                <li><a href="demo/outcomes-list-demos.html">Outcomes List Demo</a></li>
-                <li><a href="demo/outcome-details-demos.html">Outcome Details Demo</a></li>
-                <li><a href="demo/outcomes-user-progress-demos.html">Outcomes User Progress Demo</a></li>
+                <li><a href="trend-demos.html">Trend Component Demos</a></li>
+                <li><a href="outcomes-list-demos.html">Outcomes List Demo</a></li>
+                <li><a href="outcome-details-demos.html">Outcome Details Demo</a></li>
+                <li><a href="outcomes-user-progress-demos.html">Outcomes User Progress Demo</a></li>
             </ul>
         </div>
     </body>
