Dependency and lang cleanup

--- a/demo/outcomes-list-demos.html
+++ b/demo/outcomes-list-demos.html
@@ -7,7 +7,7 @@
 		<title>Outcomes List Demo</title>
 
 		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-		<script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>
+		<script type="module" src="../node_modules/@brightspace-ui/core/components/typography/typography.js"></script>
 		<script type="module" src="../src/outcomes-list/outcomes-list.js"></script>
 		
 		<style>
