--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
         </style>
 
         <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-        <script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>    
+        <script type="module" src="../node_modules/@brightspace-ui/core/components/typography/typography.js"></script>    
         <script type="module">
             const $_typographyImport = document.createElement('template');
 
