--- a/demo/outcome-details-demos.html
+++ b/demo/outcome-details-demos.html
@@ -7,7 +7,7 @@
 		<title>Outcome Progress Details Component Demo</title>
 
 		<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-		<script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>
+		<script type="module" src="../node_modules/@brightspace-ui/core/components/typography/typography.js"></script>
 		<script type="module" src="../src/outcome-details/outcome-details.js"></script>
 		<script type="module" src="../src/evidence/evidence-skeleton.js"></script>
 
