--- a/demo/outcomes-user-progress-demos.html
+++ b/demo/outcomes-user-progress-demos.html
@@ -7,7 +7,7 @@
         <title>Outcomes User Progress Demo</title>
 
         <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-        <script type="module" src="../node_modules/d2l-typography/d2l-typography.js"></script>
+        <script type="module" src="../node_modules/@brightspace-ui/core/components/typography/typography.js"></script>
         <script type="module" src="../src/outcomes-user-progress/outcomes-user-progress.js"></script>
 		
         <style>
